normalized the name AudioMack to Audiomack
git-svn-id: https://plugins.svn.wordpress.org/audiomack/trunk@779653 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,4 @@
-/* (c) AudioMack.com */
+/* (c) Audiomack.com */
 
 .audiomack_container_public .hide, .audiomack_container .hide {
     display: none;
